update contact information to be fixed width labels for readability

--- a/src/wwwroot/assets/css/content.scss
+++ b/src/wwwroot/assets/css/content.scss
@@ -36,9 +36,17 @@
 
 		.content_row {
 			min-height:100px;
+
+			ul {
+				margin-left:30px;
+			}
+
+			label {
+				width:200px;
+				display:block;
+				float:left;
+			}
 		}
 	}
-
 }
-
 
